[#245] json 역직렬화시 조회 메서드에서 Collectors.toList를 통해 ArrayList를 반환하도록 하여 타입 래퍼를 정상적으로 생성하도록 수